--- a/index.html
+++ b/index.html
@@ -23,9 +23,9 @@
         .top-bar {
             display: flex;
             justify-content: space-between;
-            padding: 5px 10px;
+            padding: 10px 10px;
             border-bottom: 2px solid #000;
-            margin-bottom: 40px; /* Spazio sotto il testo head */
+            margin-bottom: 30px; /* Spazio sotto il testo head */
         }
 
         .top-bar div {
@@ -37,11 +37,12 @@
         /* Sezione principale */
         .section {
             padding: 0;
+            margin-bottom: 40px; /* Spazio tra sezioni */
         }
 
         .divider {
             border-top: 2px solid #000;
-            margin: 20px 0; /* Spazio ampio prima della barra successiva */
+            margin: 30px 0; /* Spazio ampio prima della barra successiva */
         }
 
         .three-columns {
@@ -124,7 +125,7 @@
             .top-bar div {
                 width: 100%;
                 text-align: left;
-                margin-bottom: 60px; /* Più spazio sotto il testo dell'head su mobile */
+                margin-bottom: 30px; /* Spazio sotto il testo dell'head su mobile */
             }
 
             .three-columns {
@@ -147,21 +148,16 @@
 </head>
 <body>
 
+    <!-- Head -->
     <div class="top-bar">
         <div>Lorem ipsum dolor sit</div>
         <div>Lorem ipsum dolor sit</div>
         <div>Lorem ipsum dolor sit</div>
     </div>
+    <div class="divider"></div> <!-- Barra separatrice dopo l'head -->
 
     <!-- SEZIONE 1 -->
     <section class="section">
-        <div class="top-bar">
-            <div></div>
-            <div></div>
-            <div></div>
-        </div>
-        <div class="divider"></div> <!-- Barra separatrice -->
-
         <div class="three-columns">
             <div>Lorem ipsum dolor sit amet.</div>
             <div>Lorem ipsum dolor sit amet.</div>
@@ -176,16 +172,11 @@
                 </div>
             </div>
         </div>
-
         <div class="divider"></div> <!-- Spazio ampio prima della prossima barra -->
-        <!-- SEZIONE 2 -->
-        <div class="top-bar">
-            <div></div>
-            <div></div>
-            <div></div>
-        </div>
-        <div class="divider"></div> <!-- Barra separatrice -->
+    </section>
 
+    <!-- SEZIONE 2 -->
+    <section class="section">
         <div class="three-columns">
             <div>Lorem ipsum dolor sit amet.</div>
             <div>Lorem ipsum dolor sit amet.</div>
@@ -200,16 +191,11 @@
                 </div>
             </div>
         </div>
-
         <div class="divider"></div>
-        <!-- SEZIONE 3 -->
-        <div class="top-bar">
-            <div></div>
-            <div></div>
-            <div></div>
-        </div>
-        <div class="divider"></div> <!-- Barra separatrice -->
+    </section>
 
+    <!-- SEZIONE 3 -->
+    <section class="section">
         <div class="three-columns">
             <div>Lorem ipsum dolor sit amet.</div>
             <div>Lorem ipsum dolor sit amet.</div>
@@ -224,16 +210,11 @@
                 </div>
             </div>
         </div>
-
         <div class="divider"></div>
-        <!-- SEZIONE 4 -->
-        <div class="top-bar">
-            <div></div>
-            <div></div>
-            <div></div>
-        </div>
-        <div class="divider"></div> <!-- Barra separatrice -->
+    </section>
 
+    <!-- SEZIONE 4 -->
+    <section class="section">
         <div class="three-columns">
             <div>Lorem ipsum dolor sit amet.</div>
             <div>Lorem ipsum dolor sit amet.</div>
@@ -248,16 +229,11 @@
                 </div>
             </div>
         </div>
-
         <div class="divider"></div>
-        <!-- SEZIONE 5 -->
-        <div class="top-bar">
-            <div></div>
-            <div></div>
-            <div></div>
-        </div>
-        <div class="divider"></div> <!-- Barra separatrice -->
+    </section>
 
+    <!-- SEZIONE 5 -->
+    <section class="section">
         <div class="three-columns">
             <div>Lorem ipsum dolor sit amet.</div>
             <div>Lorem ipsum dolor sit amet.</div>
@@ -272,16 +248,11 @@
                 </div>
             </div>
         </div>
-
         <div class="divider"></div>
-        <!-- SEZIONE 6 -->
-        <div class="top-bar">
-            <div></div>
-            <div></div>
-            <div></div>
-        </div>
-        <div class="divider"></div> <!-- Barra separatrice -->
+    </section>
 
+    <!-- SEZIONE 6 -->
+    <section class="section">
         <div class="three-columns">
             <div>Lorem ipsum dolor sit amet.</div>
             <div>Lorem ipsum dolor sit amet.</div>
@@ -296,16 +267,11 @@
                 </div>
             </div>
         </div>
-
         <div class="divider"></div>
-        <!-- SEZIONE 7 -->
-        <div class="top-bar">
-            <div></div>
-            <div></div>
-            <div></div>
-        </div>
-        <div class="divider"></div> <!-- Barra separatrice -->
+    </section>
 
+    <!-- SEZIONE 7 -->
+    <section class="section">
         <div class="three-columns">
             <div>Lorem ipsum dolor sit amet.</div>
             <div>Lorem ipsum dolor sit amet.</div>
@@ -320,16 +286,11 @@
                 </div>
             </div>
         </div>
-
         <div class="divider"></div>
-        <!-- SEZIONE 8 -->
-        <div class="top-bar">
-            <div></div>
-            <div></div>
-            <div></div>
-        </div>
-        <div class="divider"></div> <!-- Barra separatrice -->
+    </section>
 
+    <!-- SEZIONE 8 -->
+    <section class="section">
         <div class="three-columns">
             <div>Lorem ipsum dolor sit amet.</div>
             <div>Lorem ipsum dolor sit amet.</div>
@@ -344,7 +305,6 @@
                 </div>
             </div>
         </div>
-
         <div class="divider"></div>
     </section>
 
