--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
         .top-bar {
             display: flex;
             justify-content: space-between;
-            padding: 10px 10px;
+            padding: 10px;
             border-bottom: 2px solid #000;
             margin-bottom: 30px; /* Spazio sotto il testo head */
         }
