--- a/index.html
+++ b/index.html
@@ -267,4 +267,21 @@
     <!-- SEZIONE 7 -->
     <section class="section">
         <div class="three-columns">
-            <div>Lorem ipsum dolor
+            <div>Lorem ipsum dolor sit amet.</div>
+            <div>Lorem ipsum dolor sit amet.</div>
+            <div>Lorem ipsum dolor sit amet.</div>
+        </div>
+        <div class="image-text-container">
+            <div class="slider">
+                <div class="slider-wrapper">
+                    <img src="https://via.placeholder.com/1000x600" alt="Immagine 19">
+                    <img src="https://via.placeholder.com/1000x600" alt="Immagine 20">
+                    <img src="https://via.placeholder.com/1000x600" alt="Immagine 21">
+                </div>
+            </div>
+        </div>
+        <div class="divider"></div>
+    </section>
+
+</body>
+</html>
