--- a/index.html
+++ b/index.html
@@ -25,7 +25,6 @@
             justify-content: space-between;
             padding: 10px;
             border-bottom: 2px solid #000;
-            margin-bottom: 40px; /* Spazio sotto il testo head */
         }
 
         .top-bar div {
@@ -36,17 +35,17 @@
 
         /* Sezione principale */
         .section {
-            padding: 0;
-            margin-bottom: 40px; /* Spazio tra sezioni */
+            margin-bottom: 40px; /* Spazio ampio tra sezioni */
         }
 
         .section-text {
             margin-top: 0px; /* Nessuno spazio sopra il testo */
+            margin-bottom: 10px; /* Poco spazio sotto il testo */
         }
 
         .divider {
             border-top: 2px solid #000;
-            margin: 30px 0; /* Spazio ampio prima della barra successiva */
+            margin: 40px 0 0 0; /* Spazio solo sopra la barra */
         }
 
         .three-columns {
@@ -278,4 +277,3 @@
 
 </body>
 </html>
-
