--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Portfolio Minimalista</title>
+    <title>girste's</title>
     <style>
         * {
             margin: 0;
@@ -25,24 +25,19 @@
             justify-content: space-between;
             padding: 10px;
             border-bottom: 2px solid #000;
-            margin-bottom: 30px; /* Spazio sotto il testo head */
+            margin-bottom: 100px; /* Spazio sotto il testo head */
         }
 
-        .top-bar div {
-            width: 30%;
-            text-align: center;
-            font-size: 0.7rem;
-        }
-
+     
         /* Sezione principale */
         .section {
             padding: 0;
-            margin-bottom: 40px; /* Spazio tra sezioni */
+            margin-bottom: 0px; /* Spazio tra sezioni */
         }
 
         .divider {
             border-top: 2px solid #000;
-            margin: 30px 0; /* Spazio ampio prima della barra successiva */
+            margin: 0px 0; /* Spazio ampio prima della barra successiva */
         }
 
         .three-columns {
