--- a/index.html
+++ b/index.html
@@ -56,6 +56,7 @@
         .image-text-container {
             margin: 0;
             overflow: hidden;
+            margin-bottom: 100px;
         }
 
         .slider {
