--- a/index.html
+++ b/index.html
@@ -149,6 +149,7 @@
         <div>Lorem ipsum dolor sit</div>
         <div>Lorem ipsum dolor sit</div>
         <div>Lorem ipsum dolor sit</div>
+            <div class="divider"></div>
     </div>
    
 
