--- a/index.html
+++ b/index.html
@@ -16,19 +16,9 @@
             font-family: 'Helvetica', sans-serif;
             color: #333;
             background-color: #fff;
-            line-height: 1.6;
+            line-height: 1.8;
         }
 
-        /* Barra in alto */
-        .top-bar {
-            display: flex;
-            justify-content: space-between;
-            padding: 10px;
-      
-            margin-bottom: 80px; /* Spazio sotto il testo head */
-        }
-
-     
         /* Sezione principale */
         .section {
             padding: 0;
@@ -144,14 +134,14 @@
 </head>
 <body>
 
-    <!-- Head -->
-    <div class="top-bar">
-        <div>Lorem ipsum dolor sit</div>
-        <div>Lorem ipsum dolor sit</div>
-        <div>Lorem ipsum dolor sit</div>
-            <div class="divider"></div>
-    </div>
-   
+     <section class="section">
+        <div class="three-columns">
+            <div>Lorem ipsum dolor sit amet.</div>
+            <div>Lorem ipsum dolor sit amet.</div>
+            <div>Lorem ipsum dolor sit amet.</div>
+
+                 <div class="divider"></div>
+        </div>
 
 
     <!-- SEZIONE 2 -->
