--- a/index.html
+++ b/index.html
@@ -134,6 +134,18 @@
 </head>
 <body>
 
+
+     <section class="section">
+        <div class="three-columns">
+            <div>Lorem ipsum dolor sit amet.</div>
+            <div>Lorem ipsum dolor sit amet.</div>
+            <div>Lorem ipsum dolor sit amet.</div>
+        </div>
+       
+        <div class="divider"></div>
+    </section>
+    
+
     <!-- SEZIONE 2 -->
     <section class="section">
         <div class="three-columns">
