--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
         .archive a {
             color: #333;
             text-decoration: none;
-            font-weight: bold;
+            font-weight: normal;
         }
 
         @media (max-width: 768px) {
