--- a/index.html
+++ b/index.html
@@ -135,7 +135,7 @@
 <body>
 
 
-     <section class="section">
+     <section class="section" margin-bottom: 5px;>
         <div class="three-columns">
             <div>Lorem ipsum dolor sit amet.</div>
             <div>Lorem ipsum dolor sit amet.</div>
