--- a/index.html
+++ b/index.html
@@ -135,8 +135,8 @@
 <body>
 
 
-     <section class="section" style="margin-bottom: 5px;">
-        <div class="three-columns">
+     <section class="section">
+        <div class="three-columns" style="margin-bottom: 5px;>
             <div>Lorem ipsum dolor sit amet.</div>
             <div>Lorem ipsum dolor sit amet.</div>
             <div>Lorem ipsum dolor sit amet.</div>
