--- a/index.html
+++ b/index.html
@@ -136,13 +136,13 @@
 
 
      <section class="section">
-        <div class="three-columns" style="margin-bottom: 5px;>
+        <div class="three-columns">
             <div>Lorem ipsum dolor sit amet.</div>
             <div>Lorem ipsum dolor sit amet.</div>
             <div>Lorem ipsum dolor sit amet.</div>
         </div>
        
-        <div class="divider"></div>
+        <div class="divider" style="margin-top: 5px;></div>
     </section>
     
 
