--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
             color: #333;
             background-color: #fff;
             line-height: 1.8;
-            overflow-y: auto; /* Permette lo scroll della pagina */
+            overflow-y: scroll; /* Permette lo scroll della pagina */
         }
 
         /* Sezione principale */
