--- a/index.html
+++ b/index.html
@@ -20,6 +20,16 @@
             overflow-y: scroll; /* Permette lo scroll della pagina */
         }
 
+        /* Nascondere la barra di scorrimento verticale */
+        ::-webkit-scrollbar {
+            width: 0; /* Nascondere la scrollbar in Chrome, Safari e Opera */
+        }
+
+        body {
+            -ms-overflow-style: none; /* Nascondere la scrollbar in IE e Edge */
+            scrollbar-width: none; /* Nascondere la scrollbar in Firefox */
+        }
+
         /* Sezione principale */
         .section {
             padding: 0;
@@ -56,11 +66,6 @@
             scroll-behavior: smooth; /* Scorrimento fluido */
             -ms-overflow-style: none; /* Nascondi la barra di scorrimento in IE e Edge */
             scrollbar-width: none; /* Nascondi la barra di scorrimento in Firefox */
-            cursor: grab;
-        }
-
-        .slider:active {
-            cursor: grabbing;
         }
 
         .slider::-webkit-scrollbar {
@@ -78,32 +83,6 @@
             margin: 0;
             padding: 0;
             width: auto;
-        }
-
-        /* Scorrimento delle immagini con il mouse */
-        .slider {
-            cursor: grab;
-        }
-
-        .slider:active {
-            cursor: grabbing;
-        }
-
-        .slider-wrapper {
-            display: flex;
-        }
-
-        .archive {
-            text-align: center;
-            padding: 20px;
-            font-size: 1rem;
-            color: #333;
-        }
-
-        .archive a {
-            color: #333;
-            text-decoration: none;
-            font-weight: normal;
         }
 
         @media (max-width: 768px) {
@@ -245,61 +224,6 @@
             <a href="#">Archivi</a>
         </div>
     </section>
-
-    <script>
-        // JavaScript per lo scorrimento delle immagini su desktop
-        const sliders = document.querySelectorAll('.slider');
-
-        sliders.forEach(slider => {
-            let isDown = false;
-            let startX;
-            let scrollLeft;
-
-            slider.addEventListener('mousedown', (e) => {
-                isDown = true;
-                slider.classList.add('active');
-                startX = e.pageX - slider.offsetLeft;
-                scrollLeft = slider.scrollLeft;
-            });
-
-            slider.addEventListener('mouseleave', () => {
-                isDown = false;
-                slider.classList.remove('active');
-            });
-
-            slider.addEventListener('mouseup', () => {
-                isDown = false;
-                slider.classList.remove('active');
-            });
-
-            slider.addEventListener('mousemove', (e) => {
-                if (!isDown) return;
-                e.preventDefault();
-                const x = e.pageX - slider.offsetLeft;
-                const walk = (x - startX) * 2; // Adjust scroll speed
-                slider.scrollLeft = scrollLeft - walk;
-            });
-
-            // Scorrimento su dispositivi touch
-            slider.addEventListener('touchstart', (e) => {
-                isDown = true;
-                startX = e.touches[0].pageX - slider.offsetLeft;
-                scrollLeft = slider.scrollLeft;
-            });
-
-            slider.addEventListener('touchend', () => {
-                isDown = false;
-            });
-
-            slider.addEventListener('touchmove', (e) => {
-                if (!isDown) return;
-                e.preventDefault();
-                const x = e.touches[0].pageX - slider.offsetLeft;
-                const walk = (x - startX) * 2; // Adjust scroll speed
-                slider.scrollLeft = scrollLeft - walk;
-            });
-        });
-    </script>
 
 </body>
 </html>
