--- a/index.html
+++ b/index.html
@@ -61,9 +61,9 @@
         }
 
         .slider {
-            display: flex;
             overflow-x: auto; /* Permette lo scorrimento orizzontale */
             scroll-behavior: smooth; /* Scorrimento fluido */
+            white-space: nowrap; /* Impedisce il ritorno a capo */
             -ms-overflow-style: none; /* Nascondi la barra di scorrimento in IE e Edge */
             scrollbar-width: none; /* Nascondi la barra di scorrimento in Firefox */
         }
@@ -74,12 +74,14 @@
 
         .slider-wrapper {
             display: flex;
+            flex-wrap: nowrap; /* Impedisce il ritorno a capo delle immagini */
         }
 
         .slider img {
             height: 600px;
             width: auto;
-            display: block;
+            display: inline-block;
+            margin-right: 10px; /* Spazio tra le immagini */
         }
 
         @media (max-width: 768px) {
@@ -221,6 +223,40 @@
             <a href="#">Archivi</a>
         </div>
     </section>
+
+    <script>
+        // Aggiungere l'abilitazione dello scorrimento orizzontale con il mouse
+        document.querySelectorAll('.slider').forEach(slider => {
+            let isDown = false;
+            let startX;
+            let scrollLeft;
+
+            slider.addEventListener('mousedown', (e) => {
+                isDown = true;
+                slider.classList.add('active');
+                startX = e.pageX - slider.offsetLeft;
+                scrollLeft = slider.scrollLeft;
+            });
+
+            slider.addEventListener('mouseleave', () => {
+                isDown = false;
+                slider.classList.remove('active');
+            });
+
+            slider.addEventListener('mouseup', () => {
+                isDown = false;
+                slider.classList.remove('active');
+            });
+
+            slider.addEventListener('mousemove', (e) => {
+                if (!isDown) return;
+                e.preventDefault();
+                const x = e.pageX - slider.offsetLeft;
+                const walk = (x - startX) * 2; // Velocità di scorrimento
+                slider.scrollLeft = scrollLeft - walk;
+            });
+        });
+    </script>
 
 </body>
 </html>
