--- a/index.html
+++ b/index.html
@@ -116,18 +116,25 @@
     <section class="section">
         <div class="three-columns">
             <div>Lorem ipsum dolor sit amet.</div>
-            <div>Lorem ipsum dolor sit amet.</div>
+            <div>Lorem ipsum dolor sit amet.Lorem ipsum dolor sit amet.Lorem ipsum dolor sit amet.Lorem ipsum dolor sit amet.Lorem ipsum dolor sit amet.
+            Lorem ipsum dolor sit amet.Lorem ipsum dolor sit amet.Lorem ipsum dolor sit amet.Lorem ipsum dolor sit amet.Lorem ipsum dolor sit amet.</div>
+            Lorem ipsum dolor sit amet.Lorem ipsum dolor sit amet.Lorem ipsum dolor sit amet.
+            Lorem ipsum dolor sit amet.
             <div>Lorem ipsum dolor sit amet.</div>
         </div>
        
-        <div class="divider" style="margin-top: 70px;"></div>
+        <div class="divider" style="margin-top: 88px;"></div>
     </section>
     
     <!-- SEZIONE 2 -->
     <section class="section">
         <div class="three-columns">
             <div>Lorem ipsum dolor sit amet.</div>
-            <div>Lorem ipsum dolor sit amet.</div>
+            <div>Lorem ipsum dolor sit amet.Lorem ipsum dolor sit amet.Lorem ipsum dolor sit amet.Lorem ipsum dolor sit amet.
+            Lorem ipsum dolor sit amet.Lorem ipsum dolor sit amet.Lorem ipsum dolor sit amet.Lorem ipsum dolor sit amet.</div>
+            Lorem ipsum dolor sit amet.Lorem ipsum dolor sit amet.Lorem ipsum dolor sit amet.Lorem ipsum dolor sit amet.
+            Lorem ipsum dolor sit amet.Lorem ipsum dolor sit amet.Lorem ipsum dolor sit amet.
+            Lorem ipsum dolor sit amet.
             <div>Lorem ipsum dolor sit amet.</div>
         </div>
         <div class="image-text-container">
