--- a/index.html
+++ b/index.html
@@ -63,12 +63,14 @@
             display: flex;
             overflow-x: auto;
             scroll-behavior: smooth;
+            cursor: grab;
         }
 
         .slider img {
             height: 600px;
             width: auto;
             flex: 0 0 auto; /* Evita che le immagini si ridimensionino */
+            margin-right: -4px; /* Mantiene le immagini attaccate */
         }
 
         /* Adattamento delle immagini su mobile */
@@ -112,7 +114,6 @@
     </style>
 </head>
 <body>
-
     <section class="section">
         <div class="three-columns">
             <div>Lorem ipsum dolor sit amet.</div>
@@ -229,6 +230,43 @@
                 <img src="https://via.placeholder.com/1000x600" alt="Immagine 21">
             </div>
         </div>
+        <div class="divider"></div>
     </section>
+
+    <script>
+        document.addEventListener('DOMContentLoaded', function() {
+            const sliders = document.querySelectorAll('.slider');
+
+            sliders.forEach(slider => {
+                let isMouseDown = false;
+                let startX, scrollLeft;
+
+                slider.addEventListener('mousedown', (e) => {
+                    isMouseDown = true;
+                    startX = e.pageX - slider.offsetLeft;
+                    scrollLeft = slider.scrollLeft;
+                    slider.style.cursor = 'grabbing';
+                });
+
+                slider.addEventListener('mouseleave', () => {
+                    isMouseDown = false;
+                    slider.style.cursor = 'grab';
+                });
+
+                slider.addEventListener('mouseup', () => {
+                    isMouseDown = false;
+                    slider.style.cursor = 'grab';
+                });
+
+                slider.addEventListener('mousemove', (e) => {
+                    if (!isMouseDown) return;
+                    e.preventDefault();
+                    const x = e.pageX - slider.offsetLeft;
+                    const walk = (x - startX) * 2; // Scroll speed
+                    slider.scrollLeft = scrollLeft - walk;
+                });
+            });
+        });
+    </script>
 </body>
 </html>
