--- a/index.html
+++ b/index.html
@@ -51,6 +51,10 @@
             padding: 5px;
             box-sizing: border-box;
             font-size: 0.7rem;
+            margin-left: 5px; /* Aggiunto margine a sinistra */
+            overflow: hidden; /* Nasconde il testo che sborda */
+            text-overflow: ellipsis; /* Mostra i puntini di sospensione se il testo è troppo lungo */
+            white-space: normal; /* Consente al testo di andare a capo */
         }
 
         .image-text-container {
@@ -119,8 +123,7 @@
             <div>Lorem ipsum dolor sit amet.</div>
             <div>Lorem ipsum dolor sit amet.Lorem ipsum dolor sit amet.Lorem ipsum dolor sit amet.Lorem ipsum dolor sit amet.Lorem ipsum dolor sit amet.
             Lorem ipsum dolor sit amet.Lorem ipsum dolor sit amet.Lorem ipsum dolor sit amet.Lorem ipsum dolor sit amet.Lorem ipsum dolor sit amet.</div>
-            Lorem ipsum dolor sit amet.Lorem ipsum dolor sit amet.Lorem ipsum dolor sit amet.
-            Lorem ipsum dolor sit amet.
+            <div>Lorem ipsum dolor sit amet.Lorem ipsum dolor sit amet.Lorem ipsum dolor sit amet.Lorem ipsum dolor sit amet.</div>
             <div>Lorem ipsum dolor sit amet.</div>
         </div>
        
@@ -133,17 +136,12 @@
             <div>Lorem ipsum dolor sit amet.</div>
             <div>Lorem ipsum dolor sit amet.Lorem ipsum dolor sit amet.Lorem ipsum dolor sit amet.Lorem ipsum dolor sit amet.
             Lorem ipsum dolor sit amet.Lorem ipsum dolor sit amet.Lorem ipsum dolor sit amet.Lorem ipsum dolor sit amet.</div>
-            Lorem ipsum dolor sit amet.Lorem ipsum dolor sit amet.Lorem ipsum dolor sit amet.Lorem ipsum dolor sit amet.
-            Lorem ipsum dolor sit amet.Lorem ipsum dolor sit amet.Lorem ipsum dolor sit amet.
-            Lorem ipsum dolor sit amet.
+            <div>Lorem ipsum dolor sit amet.Lorem ipsum dolor sit amet.Lorem ipsum dolor sit amet.Lorem ipsum dolor sit amet.
+            Lorem ipsum dolor sit amet.Lorem ipsum dolor sit amet.Lorem ipsum dolor sit amet.Lorem ipsum dolor sit amet.</div>
             <div>Lorem ipsum dolor sit amet.</div>
         </div>
         <div class="image-text-container">
-            <div class="slider">
-                <img src="https://via.placeholder.com/1000x600" alt="Immagine 4">
-                <img src="https://via.placeholder.com/1000x600" alt="Immagine 5">
-                <img src="https://via.placeholder.com/1000x600" alt="Immagine 6">
-            </div>
+            <!-- Contenuto per la sezione 2 -->
         </div>
         <div class="divider"></div>
     </section>
@@ -156,11 +154,7 @@
             <div>Lorem ipsum dolor sit amet.</div>
         </div>
         <div class="image-text-container">
-            <div class="slider">
-                <img src="https://via.placeholder.com/1000x600" alt="Immagine 7">
-                <img src="https://via.placeholder.com/1000x600" alt="Immagine 8">
-                <img src="https://via.placeholder.com/1000x600" alt="Immagine 9">
-            </div>
+            <!-- Contenuto per la sezione 3 -->
         </div>
         <div class="divider"></div>
     </section>
@@ -173,11 +167,7 @@
             <div>Lorem ipsum dolor sit amet.</div>
         </div>
         <div class="image-text-container">
-            <div class="slider">
-                <img src="https://via.placeholder.com/1000x600" alt="Immagine 10">
-                <img src="https://via.placeholder.com/1000x600" alt="Immagine 11">
-                <img src="https://via.placeholder.com/1000x600" alt="Immagine 12">
-            </div>
+            <!-- Contenuto per la sezione 4 -->
         </div>
         <div class="divider"></div>
     </section>
@@ -190,11 +180,7 @@
             <div>Lorem ipsum dolor sit amet.</div>
         </div>
         <div class="image-text-container">
-            <div class="slider">
-                <img src="https://via.placeholder.com/1000x600" alt="Immagine 13">
-                <img src="https://via.placeholder.com/1000x600" alt="Immagine 14">
-                <img src="https://via.placeholder.com/1000x600" alt="Immagine 15">
-            </div>
+            <!-- Contenuto per la sezione 5 -->
         </div>
         <div class="divider"></div>
     </section>
@@ -207,11 +193,7 @@
             <div>Lorem ipsum dolor sit amet.</div>
         </div>
         <div class="image-text-container">
-            <div class="slider">
-                <img src="https://via.placeholder.com/1000x600" alt="Immagine 16">
-                <img src="https://via.placeholder.com/1000x600" alt="Immagine 17">
-                <img src="https://via.placeholder.com/1000x600" alt="Immagine 18">
-            </div>
+            <!-- Contenuto per la sezione 6 -->
         </div>
         <div class="divider"></div>
     </section>
@@ -224,49 +206,9 @@
             <div>Lorem ipsum dolor sit amet.</div>
         </div>
         <div class="image-text-container">
-            <div class="slider">
-                <img src="https://via.placeholder.com/1000x600" alt="Immagine 19">
-                <img src="https://via.placeholder.com/1000x600" alt="Immagine 20">
-                <img src="https://via.placeholder.com/1000x600" alt="Immagine 21">
-            </div>
+            <!-- Contenuto per la sezione 7 -->
         </div>
         <div class="divider"></div>
     </section>
-
-    <script>
-        document.addEventListener('DOMContentLoaded', function() {
-            const sliders = document.querySelectorAll('.slider');
-
-            sliders.forEach(slider => {
-                let isMouseDown = false;
-                let startX, scrollLeft;
-
-                slider.addEventListener('mousedown', (e) => {
-                    isMouseDown = true;
-                    startX = e.pageX - slider.offsetLeft;
-                    scrollLeft = slider.scrollLeft;
-                    slider.style.cursor = 'grabbing';
-                });
-
-                slider.addEventListener('mouseleave', () => {
-                    isMouseDown = false;
-                    slider.style.cursor = 'grab';
-                });
-
-                slider.addEventListener('mouseup', () => {
-                    isMouseDown = false;
-                    slider.style.cursor = 'grab';
-                });
-
-                slider.addEventListener('mousemove', (e) => {
-                    if (!isMouseDown) return;
-                    e.preventDefault();
-                    const x = e.pageX - slider.offsetLeft;
-                    const walk = (x - startX) * 2; // Scroll speed
-                    slider.scrollLeft = scrollLeft - walk;
-                });
-            });
-        });
-    </script>
 </body>
 </html>
