--- a/index.html
+++ b/index.html
@@ -51,10 +51,7 @@
             padding: 5px;
             box-sizing: border-box;
             font-size: 0.7rem;
-            margin-left: 5px; /* Aggiunto margine a sinistra */
-            overflow: hidden; /* Nasconde il testo che sborda */
-            text-overflow: ellipsis; /* Mostra i puntini di sospensione se il testo è troppo lungo */
-            white-space: normal; /* Consente al testo di andare a capo */
+            margin-left: 8px; /* Margine a sinistra per il testo */
         }
 
         .image-text-container {
@@ -123,7 +120,6 @@
             <div>Lorem ipsum dolor sit amet.</div>
             <div>Lorem ipsum dolor sit amet.Lorem ipsum dolor sit amet.Lorem ipsum dolor sit amet.Lorem ipsum dolor sit amet.Lorem ipsum dolor sit amet.
             Lorem ipsum dolor sit amet.Lorem ipsum dolor sit amet.Lorem ipsum dolor sit amet.Lorem ipsum dolor sit amet.Lorem ipsum dolor sit amet.</div>
-            <div>Lorem ipsum dolor sit amet.Lorem ipsum dolor sit amet.Lorem ipsum dolor sit amet.Lorem ipsum dolor sit amet.</div>
             <div>Lorem ipsum dolor sit amet.</div>
         </div>
        
@@ -138,10 +134,13 @@
             Lorem ipsum dolor sit amet.Lorem ipsum dolor sit amet.Lorem ipsum dolor sit amet.Lorem ipsum dolor sit amet.</div>
             <div>Lorem ipsum dolor sit amet.Lorem ipsum dolor sit amet.Lorem ipsum dolor sit amet.Lorem ipsum dolor sit amet.
             Lorem ipsum dolor sit amet.Lorem ipsum dolor sit amet.Lorem ipsum dolor sit amet.Lorem ipsum dolor sit amet.</div>
-            <div>Lorem ipsum dolor sit amet.</div>
         </div>
         <div class="image-text-container">
-            <!-- Contenuto per la sezione 2 -->
+            <div class="slider">
+                <img src="https://via.placeholder.com/1000x600" alt="Immagine 4">
+                <img src="https://via.placeholder.com/1000x600" alt="Immagine 5">
+                <img src="https://via.placeholder.com/1000x600" alt="Immagine 6">
+            </div>
         </div>
         <div class="divider"></div>
     </section>
@@ -154,7 +153,11 @@
             <div>Lorem ipsum dolor sit amet.</div>
         </div>
         <div class="image-text-container">
-            <!-- Contenuto per la sezione 3 -->
+            <div class="slider">
+                <img src="https://via.placeholder.com/1000x600" alt="Immagine 7">
+                <img src="https://via.placeholder.com/1000x600" alt="Immagine 8">
+                <img src="https://via.placeholder.com/1000x600" alt="Immagine 9">
+            </div>
         </div>
         <div class="divider"></div>
     </section>
@@ -167,7 +170,11 @@
             <div>Lorem ipsum dolor sit amet.</div>
         </div>
         <div class="image-text-container">
-            <!-- Contenuto per la sezione 4 -->
+            <div class="slider">
+                <img src="https://via.placeholder.com/1000x600" alt="Immagine 10">
+                <img src="https://via.placeholder.com/1000x600" alt="Immagine 11">
+                <img src="https://via.placeholder.com/1000x600" alt="Immagine 12">
+            </div>
         </div>
         <div class="divider"></div>
     </section>
@@ -180,7 +187,11 @@
             <div>Lorem ipsum dolor sit amet.</div>
         </div>
         <div class="image-text-container">
-            <!-- Contenuto per la sezione 5 -->
+            <div class="slider">
+                <img src="https://via.placeholder.com/1000x600" alt="Immagine 13">
+                <img src="https://via.placeholder.com/1000x600" alt="Immagine 14">
+                <img src="https://via.placeholder.com/1000x600" alt="Immagine 15">
+            </div>
         </div>
         <div class="divider"></div>
     </section>
@@ -193,7 +204,11 @@
             <div>Lorem ipsum dolor sit amet.</div>
         </div>
         <div class="image-text-container">
-            <!-- Contenuto per la sezione 6 -->
+            <div class="slider">
+                <img src="https://via.placeholder.com/1000x600" alt="Immagine 16">
+                <img src="https://via.placeholder.com/1000x600" alt="Immagine 17">
+                <img src="https://via.placeholder.com/1000x600" alt="Immagine 18">
+            </div>
         </div>
         <div class="divider"></div>
     </section>
@@ -206,9 +221,50 @@
             <div>Lorem ipsum dolor sit amet.</div>
         </div>
         <div class="image-text-container">
-            <!-- Contenuto per la sezione 7 -->
+            <div class="slider">
+                <img src="https://via.placeholder.com/1000x600" alt="Immagine 19">
+                <img src="https://via.placeholder.com/1000x600" alt="Immagine 20">
+                <img src="https://via.placeholder.com/1000x600" alt="Immagine 21">
+            </div>
         </div>
         <div class="divider"></div>
     </section>
+
+    <script>
+        document.addEventListener('DOMContentLoaded', function() {
+            const sliders = document.querySelectorAll('.slider');
+
+            sliders.forEach(slider => {
+                let isMouseDown = false;
+                let startX;
+                let scrollLeft;
+
+                slider.addEventListener('mousedown', (e) => {
+                    isMouseDown = true;
+                    slider.classList.add('active');
+                    startX = e.pageX - slider.offsetLeft;
+                    scrollLeft = slider.scrollLeft;
+                });
+
+                slider.addEventListener('mouseleave', () => {
+                    isMouseDown = false;
+                    slider.classList.remove('active');
+                });
+
+                slider.addEventListener('mouseup', () => {
+                    isMouseDown = false;
+                    slider.classList.remove('active');
+                });
+
+                slider.addEventListener('mousemove', (e) => {
+                    if (!isMouseDown) return;
+                    e.preventDefault();
+                    const x = e.pageX - slider.offsetLeft;
+                    const walk = (x - startX) * 2; // Scroll speed
+                    slider.scrollLeft = scrollLeft - walk;
+                });
+            });
+        });
+    </script>
 </body>
 </html>
